Fix section at the bottom of the page that turned light blue on smaller pages.

--- a/src/main/resources/static/assets/css/custom.css
+++ b/src/main/resources/static/assets/css/custom.css
@@ -7,7 +7,9 @@
   --dark-grey: #121111;
 }
 
-body {
+html,
+body,
+.slab--off-white {
   background-color: var(--light);
 }
 
